--- a/package.json
+++ b/package.json
@@ -1,65 +1,61 @@
 {
-  "name": "BaseProxy",
-  "id": "BaseProxy",
+  "name": "SenseBase",
+  "id": "SenseBase",
   "version": "0.0.0",
-  "description": "BaseProxy.",
+  "description": "SenseBase.",
   "dependencies": {
-    "querystring": "latest",
-    "faye": "latest",
-    "require-analyzer": "latest",
-    "jquery": "latest",
-    "jsdom": "latest",
-    "colors": "latest",
-    "connect-flash": "latest",
-    "ejs": "latest",
-    "es": "latest",
-    "express": "latest",
-    "forever": "latest",
-    "grunt": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-develop": "latest",
-    "grunt-forever": "latest",
-    "grunt-includes": "latest",
-    "passport": "latest",
-    "passport-local": "latest",
-    "request": "latest",
-    "grunt-string-replace": "~0.2.7",
     "queue-async": "~1.0.4",
     "filter-proxy": "0.0.0",
     "natural": "~0.1.25",
     "Sentimental": "0.0.4",
     "winston": "~0.7.2",
-    "expect.js": "~0.2.0",
     "commander": "~2.1.0",
     "jshint": "~2.4.3",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-test": "~0.8.2",
-    "grunt-docco2": "~0.1.5",
-    "grunt-plato": "~0.2.1"
+    "connect-flash": "0.1.x",
+    "ejs": "0.8.x",
+    "es": "0.3.x",
+    "jquery": "2.1.x",
+    "querystring": "0.2.x",
+    "express": "3.4.x",
+    "faye": "1.0.x",
+    "forever": "0.10.x",
+    "jsdom": "0.9.x",
+    "passport": "0.2.x",
+    "passport-local": "0.1.x",
+    "request": "2.33.x",
+    "require-analyzer": "0.5.x"
   },
   "main": "Gruntfile.js",
   "devDependencies": {
-    "connect-livereload": "~0.3.2",
+    "expect.js": "~0.2.0",
+    "grunt-develop": "0.3.x",
+    "grunt-forever": "0.4.x",
+    "grunt-includes": "0.4.x",
     "yadda": "~0.5.2",
+    "grunt": "0.4.x",
+    "grunt-contrib-watch": "0.5.x",
+    "grunt-string-replace": "~0.2.7",
     "mocha": "~1.12.0",
-    "selenium-webdriver": "2.35.x",
-    "glob": "~3.2.x",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-mocha-test": "~0.8.2",
+    "grunt-docco2": "~0.1.5",
+    "grunt-plato": "~0.2.1",
     "xunit-file": "0.0.4"
   },
   "scripts": {
-    "test": "grunt mochaTest:devUnitTest  mochaTest:configTest"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vid/BaseProxy"
+    "url": "https://github.com/Vid/SenseBase"
   },
   "keywords": [
-    "node.js",
-    "semantic"
+    "semantic",
+    "annotation"
   ],
   "author": "Vid",
-  "license": "eventually",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Vid/BaseProxy/issues"
+    "url": "https://github.com/Vid/SenseBase/issues"
   }
 }
