--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport-local": "0.1.x",
     "request": "2.33.x",
     "require-analyzer": "0.5.x",
-    "cheerio": "~0.13.1"
+    "cheerio": "~0.13.1",
+    "colors": "~0.6.2"
   },
   "main": "index.js",
   "devDependencies": {
