--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "passport-local": "0.1.x",
     "request": "2.33.x",
     "cheerio": "~0.13.1",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "xml2js": "^0.4.2"
   },
   "main": "index.js",
   "devDependencies": {
