--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,28 @@ uploads/
 bower_components/
 local-users.json
 local-pm2.json
+static/__wm/anno.js
+static/__wm/dashboard.css
+static/__wm/dashboard.js
+static/__wm/displayAnnoTree.js
+static/__wm/icons/30x-0
+static/__wm/icons/30x-1
+static/__wm/icons/scraper.png
+static/__wm/icons/shovellogo.png
+static/__wm/iframe-contents.html
+static/__wm/iframe.html
+static/__wm/index.html
+static/__wm/injected-iframe.html
+static/__wm/injected-iframe.js
+static/__wm/injected.js
+static/__wm/member.html
+static/__wm/members.js
+static/__wm/query.html
+static/__wm/results.js
+static/__wm/scrape.html
+static/__wm/scrape.js
+static/__wm/team.html
+static/__wm/test-iframe.html
+static/__wm/users.js
+static/__wm/viz.js
 
