--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.4",
   "description": "SenseBase basis for workgroup annotation.",
   "dependencies": {
-    "filter-proxy": "latest",
+    "filter-proxy": "0.0.4",
     "Sentimental": "0.0.4",
     "winston": "~0.7.2",
     "connect-flash": "0.1.x",
