--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "filter-proxy": "0.0.4",
     "Sentimental": "0.0.4",
     "winston": "~0.7.2",
-    "connect-flash": "0.1.x",
     "ejs": "0.8.x",
     "es": "0.3.x",
     "jquery": "2.1.x",
@@ -19,7 +18,8 @@
     "request": "2.33.x",
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
-    "xml2js": "^0.4.2"
+    "xml2js": "^0.4.2",
+    "express-flash": "0.0.2"
   },
   "main": "index.js",
   "devDependencies": {
