--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
     "xml2js": "^0.4.2",
-    "express-flash": "0.0.2"
+    "express-flash": "0.0.2",
+    "express-namespace": "^0.1.1"
   },
   "main": "index.js",
   "devDependencies": {
