add imported to queued

--- a/util/risMapping.json
+++ b/util/risMapping.json
@@ -1,13 +1,13 @@
 {
   "TY" : "type",
   "ID" : "id",
-  "KW" : ["keyword"],
-  "T1" : "title",
-  "JF" : "secondary_title_types",
-  "A1" : ["primary_author"],
-  "A2" : ["secondary_author"],
-  "A3" : ["tertiary_author"],
-  "A4" : ["subsidary_author"],
+  "KW" : ["Keyword"],
+  "T1" : "Title",
+  "JF" : "Secondary title types",
+  "A1" : ["Primary author"],
+  "A2" : ["Secondary author"],
+  "A3" : ["Tertiary author"],
+  "A4" : ["Subsidary author"],
   "Y1" : "year",
   "N1" : "notes",
   "IS" : ["number"],
