--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mocha": "~1.12.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-mocha-test": "~0.8.2",
-    "grunt-docco2": "~0.1.5",
+    "grunt-docco": "latest",
     "grunt-plato": "~0.2.1",
     "xunit-file": "0.0.4"
   },
