--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "colors": "~0.6.2",
     "xml2js": "^0.4.2",
     "express-flash": "0.0.2",
-    "express-namespace": "^0.1.1"
+    "express-namespace": "^0.1.1",
+    "unfluff": "~0.2.0"
   },
   "main": "index.js",
   "devDependencies": {
