adding connect-flash

--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "version": "0.0.4",
   "description": "SenseBase basis for workgroup annotation.",
   "dependencies": {
-    "filter-proxy": "0.0.4",
     "Sentimental": "0.0.4",
-    "winston": "~0.7.2",
-    "ejs": "0.8.x",
-    "es": "0.3.x",
-    "jquery": "2.1.x",
-    "querystring": "0.2.x",
-    "express": "3.4.x",
-    "faye": "1.0.x",
-    "passport": "0.2.x",
-    "passport-local": "0.1.x",
-    "request": "2.33.x",
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
-    "xml2js": "^0.4.2",
+    "connect-flash": "^0.1.1",
+    "ejs": "0.8.x",
+    "es": "0.3.x",
+    "express": "3.4.x",
     "express-flash": "0.0.2",
     "express-namespace": "^0.1.1",
-    "unfluff": "~0.2.0"
+    "faye": "1.0.x",
+    "filter-proxy": "0.0.4",
+    "jquery": "2.1.x",
+    "passport": "0.2.x",
+    "passport-local": "0.1.x",
+    "querystring": "0.2.x",
+    "request": "2.33.x",
+    "unfluff": "~0.2.0",
+    "winston": "~0.7.2",
+    "xml2js": "^0.4.2"
   },
   "main": "index.js",
   "devDependencies": {
