--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
   },
   "main": "index.js",
   "devDependencies": {
-    "jshint": "~2.4.3",
     "expect.js": "~0.2.0",
-    "require-analyzer": "0.5.x",
-    "grunt-develop": "0.3.x",
-    "grunt-includes": "0.4.x",
-    "yadda": "~0.5.2",
     "grunt": "0.4.x",
-    "grunt-contrib-watch": "0.5.x",
-    "grunt-string-replace": "~0.2.7",
-    "mocha": "~1.12.0",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-test": "~0.8.2",
+    "grunt-contrib-watch": "0.5.x",
+    "grunt-develop": "0.3.x",
     "grunt-docco": "latest",
+    "grunt-docker": "0.0.8",
+    "grunt-includes": "0.4.x",
+    "grunt-mocha-test": "~0.8.2",
     "grunt-plato": "~0.2.1",
-    "xunit-file": "0.0.4"
+    "grunt-string-replace": "~0.2.7",
+    "jshint": "~2.4.3",
+    "mocha": "~1.12.0",
+    "require-analyzer": "0.5.x",
+    "xunit-file": "0.0.4",
+    "yadda": "~0.5.2"
   },
   "scripts": {
     "test": "mocha test",
