--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "2.1.x",
     "passport": "0.2.x",
     "passport-local": "0.1.x",
+    "pullquoter": "0.0.2",
     "querystring": "0.2.x",
     "request": "2.33.x",
     "unfluff": "~0.2.0",
