--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt": "0.4.x",
     "grunt-browserify": "^2.1.4",
     "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "0.5.x",
     "grunt-develop": "0.3.x",
     "grunt-docco": "latest",
@@ -43,7 +44,9 @@
     "mocha": "~1.12.0",
     "require-analyzer": "0.5.x",
     "xunit-file": "0.0.4",
-    "yadda": "~0.5.2"
+    "grunt-contrib-concat": "0.1.3",
+    "grunt-contrib-cssmin" : "0.6.1",
+    "grunt-contrib-watch" : "0.5.3"
   },
   "scripts": {
     "test": "mocha test",
