--- a/package.json
+++ b/package.json
@@ -30,23 +30,21 @@
     "expect.js": "~0.2.0",
     "grunt": "0.4.x",
     "grunt-browserify": "^2.1.4",
+    "grunt-contrib-concat": "0.1.3",
+    "grunt-contrib-cssmin": "0.6.1",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "0.5.x",
+    "grunt-contrib-watch": "0.5.3",
     "grunt-develop": "0.3.x",
     "grunt-docco": "latest",
     "grunt-docker": "0.0.8",
     "grunt-includes": "0.4.x",
     "grunt-mocha-test": "~0.8.2",
     "grunt-plato": "~0.2.1",
-    "grunt-string-replace": "~0.2.7",
     "jshint": "~2.4.3",
     "mocha": "~1.12.0",
     "require-analyzer": "0.5.x",
-    "xunit-file": "0.0.4",
-    "grunt-contrib-concat": "0.1.3",
-    "grunt-contrib-cssmin" : "0.6.1",
-    "grunt-contrib-watch" : "0.5.3"
+    "xunit-file": "0.0.4"
   },
   "scripts": {
     "test": "mocha test",
