--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "0.5.3",
     "grunt-develop": "0.3.x",
-    "grunt-docco": "latest",
-    "grunt-docker": "0.0.8",
+    "grunt-docker": "latest",
     "grunt-includes": "0.4.x",
     "grunt-mocha-test": "~0.8.2",
     "grunt-plato": "~0.2.1",
