--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-includes": "0.4.x",
     "grunt-mocha-test": "~0.8.2",
     "grunt-plato": "~0.2.1",
+    "grunt-string-replace": "^0.2.7",
     "jshint": "~2.4.3",
     "mocha": "~1.12.0",
     "require-analyzer": "0.5.x",
