--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,11 @@ config.js
 uploads/
 bower_components/
 local-site.json
-local-pm2.json
-static/__wm/index.js
-static/__wm/libs.css
-static/__wm/libs.min.js
-static/__wm/index.html
-static/__wm/dashboard.css
-static/__wm/iframe-contents.html
-static/__wm/injected-iframe.html
-static/__wm/injected-iframe.js
-static/__wm/injected.js
+web/static/index.js
+web/static/libs.css
+web/static/libs.min.js
+web/static/index.html
+web/static/dashboard.css
+web/static/injected-iframe.html
+web/static/injected.js
+web/static/injected-iframe.js
