switch to lodash for templates

--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
     "connect-flash": "^0.1.1",
-    "ejs": "0.8.x",
-    "es": "0.3.x",
     "express": "3.4.x",
     "express-flash": "0.0.2",
     "express-namespace": "^0.1.1",
     "faye": "1.0.x",
     "filter-proxy": "0.0.4",
     "jquery": "2.1.x",
+    "lodash": "^2.4.1",
     "passport": "0.2.x",
     "passport-local": "0.1.x",
     "pullquoter": "0.0.2",
