--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ web/static/libs.min.js
 web/static/index.html
 web/static/dashboard.css
 web/static/inject.js
-web/static/injected-iframe.html
+web/views/iframe.html
 web/static/index-injected.js
 web/static/injected-iframe.js
