add lib, fix path

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "faye": "1.0.x",
     "filter-proxy": "0.0.4",
     "jquery": "2.1.x",
-    "lodash": "^2.4.1",
+    "lodash": "~2.4.1",
     "passport": "0.2.x",
     "passport-local": "0.1.x",
     "pullquoter": "0.0.2",
