--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "jshint": "~2.4.3",
     "mocha": "~1.12.0",
     "require-analyzer": "0.5.x",
-    "xunit-file": "0.0.4"
+    "xunit-file": "0.0.4",
+    "grunt-execute": "~0.2.2"
   },
   "scripts": {
     "test": "mocha test",
