--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-namespace": "^0.1.1",
     "faye": "1.0.x",
     "filter-proxy": "0.0.6",
+    "forever": "^0.11.1",
     "jquery": "2.1.x",
     "lodash": "~2.4.1",
     "passport": "0.2.x",
