--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
     "connect-flash": "^0.1.1",
-    "cron": "^1.0.4",
     "es": "^0.4.4",
     "express": "3.4.x",
     "express-flash": "0.0.2",
@@ -18,6 +17,7 @@
     "filter-proxy": "0.0.6",
     "forever": "^0.11.1",
     "jquery": "2.1.x",
+    "later": "^1.1.6",
     "lodash": "~2.4.1",
     "passport": "0.2.x",
     "passport-local": "0.1.x",
