--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "passport-local": "0.1.x",
     "pullquoter": "0.0.2",
     "querystring": "0.2.x",
+    "react": "~0.11.1",
+    "reactify": "~0.14.0",
+    "request": "^2.46.0",
     "tldjs": "^1.5.0",
     "unfluff": "~0.2.0",
     "winston": "~0.7.2",
-    "xml2js": "^0.4.2",
-    "react": "~0.11.1",
-    "reactify": "~0.14.0"
+    "xml2js": "^0.4.2"
   },
   "main": "index.js",
   "devDependencies": {
