--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "~0.13.1",
     "colors": "~0.6.2",
     "connect-flash": "^0.1.1",
+    "csvtojson": "^0.3.14",
     "es": "^0.4.4",
     "express": "3.4.x",
     "express-flash": "0.0.2",
