--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tldjs": "^1.5.0",
     "unfluff": "~0.2.0",
     "winston": "~0.7.2",
-    "xml2js": "^0.4.2"
+    "xml2js": "^0.4.2",
+    "feedparser": "~0.19.2"
   },
   "main": "index.js",
   "devDependencies": {
