--- a/util/risMapping.json
+++ b/util/risMapping.json
@@ -1,8 +1,10 @@
 {
-  "TY" : "type",
+  "TY" : ["type"],
   "ID" : "id",
   "KW" : ["Keyword"],
-  "T1" : "Title",
+  "T1" : "title",
+  "T2" : ["Secondary Title"],
+  "T3" : ["Tertiary Title"],
   "JF" : "Secondary title types",
   "A1" : ["Primary author"],
   "A2" : ["Secondary author"],
@@ -23,7 +25,13 @@
   "UR" : "url",
   "ER" : "ER",
   "SB" : ["SB"],
-  "PB" : "Publisher",
+  "PB" : ["Publisher"],
+  "CY" : "Place Published",
+  "SN" : ["ISBN/ISSN"],
+  "M1" : ["Number"],
+  "L2" : "Link 2",
+  "M2" : "DOI Link",
+  "M3" : "Type of Work",
 
   "AB": "Abstract",
   "CI": "Copyright Information",
